# smartdns

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CODE_REVIEW.md  Dockerfile  Dockerfile.alpine  Dockerfile.old  Makefile  REVIEW_SUMMARY.md  ReadMe.md  ReadMe_en.md  ReadMe_zh-CN.md  VERSION  conf.c  conf.h  dns-client.c  dns-client.h  dns.c  dns.h  dns_client.c  dns_client.h  dns_server.c  dns_server.h  docker-entrypoint.sh  fast_ping.c  fast_ping.h  install  mkdocs.yml  smartdns  smartdns.c  smartdns.conf  smartdns_geosite_domain_rules_analysis_optimization.md  smartdns_technical analysis_document.md  test-dns.c  util.c  util.h
.cursor/rules/: smartdns_codebase_guide.mdc
.github/ISSUE_TEMPLATE/: ----.md  feature.md  issue.md
.github/workflows/: c-cpp.yml  deploy-docker.yml  docker-publish.yml  docker.yml  fetch upstream.yml  mkdocs.yaml  release.yml  test-new.yml  test-openwrt.yml  test.yml  webui.yml
Doc/: architecture.vsdx
bld/: pkg-wrapper
cre2/: Makefile.am  Makefile.in  README.md  acinclude.m4  aclocal.m4  autogen.sh  codecov.yml  config.h.in  configure.ac  configure.sh
cre2/autom4te.cache/: output.1  requests  traces.0  traces.1
doc/: architecture.vsdx  smartdns-banner.xcf
docs/: compile.md  configuration.md  donate.md  download.md  faq.md  index.md
docs/config/: ad-block.md  basic-config.md  block-ipv6.md  bootstrap-dns.md  cache.md  cname.md  (+24 more)
en/: mkdocs.yml
include/: atomic.h  bitmap.h  bitops.h  cache.h  findbit.h  gcc_builtin.h  hash.h  hashtable.h  jhash.h  list.h
lib/: bitops.c
package/: build-pkg.sh  copy-smartdns.sh  run-smartdns
plugin/smartdns-ui/: Cargo.toml  Makefile  build.rs
plugin/smartdns-ui/src/: data_server.rs  data_stats.rs  data_upstream_server.rs  db.rs  http_api_msg.rs  http_error.rs  http_jwt.rs  http_server.rs  http_server_api.rs  http_server_log_stream.rs  http_server_stream.rs  lib.rs  plugin.rs  server_log.rs  smartdns.rs  utils.rs  whois.rs
plugin/smartdns-ui/tests/: httpserver_test.rs  restapi_test.rs
plugin/smartdns-ui/tests/common/: client.rs  mod.rs  server.rs
src/: .gitignore  CMakeLists.txt  Makefile  common.h  conf.c  conf.h  config.h  dns.c  dns.h  dns_cache.c  dns_cache.h  dns_client.c  dns_client.h  dns_conf.c  dns_conf.h  dns_plugin.c  dns_plugin.h  dns_rules.c  dns_rules.h  dns_server.c  dns_server.h  dns_stats.c  dns_stats.h  fast_ping.c  fast_ping.h  http_parse.c  http_parse.h  main.c  proxy.c  proxy.h  regexp.c  regexp.h  smartdns.c  smartdns.h  timer.c  timer.h  tlog.c  tlog.h  util.c  util.h
src/dns_client/: client_doh_gsocket.c  client_doh_gsocket.h  client_doq_gsocket.c  client_doq_gsocket.h  client_gsocket.c  client_gsocket.h  client_gsocket_factory.c  client_gsocket_proto.c  client_gsocket_proto.h  client_gsocket_stream.c  client_gsocket_stream.h  client_gsocket_tcp.c  client_gsocket_transport.c  client_gsocket_udp.c  client_http2.c  client_http2.h  client_http3.c  client_http3.h  client_https.c  client_https.h  client_mdns.c  client_mdns.h  client_quic.c  client_quic.h  client_socket.c  client_socket.h  client_tcp.c  client_tcp.h  client_tls.c  client_tls.h  client_udp.c  client_udp.h  conn_stream.c  conn_stream.h  dns_client.c  dns_client.h  ecs.c  ecs.h  group.c  group.h  (+12 more)
src/dns_conf/: address.c  address.h  bind.c  bind.h  bootstrap_dns.c  bootstrap_dns.h  client_rule.c  client_rule.h  client_subnet.c  client_subnet.h  cname.c  cname.h  conf_file.c  conf_file.h  ddns_domain.c  ddns_domain.h  dhcp_lease_dnsmasq.c  dhcp_lease_dnsmasq.h  dns64.c  dns64.h  dns_conf.c  dns_conf.h  dns_conf_group.c  dns_conf_group.h  domain_rule.c  domain_rule.h  domain_set.c  domain_set.h  get_domain.c  get_domain.h  group.c  group.h  host_file.c  host_file.h  https_record.c  https_record.h  ip_alias.c  ip_alias.h  ip_proxy.c  ip_proxy.h  (+38 more)
src/dns_gsocket/: dns_gsocket_driver.c  dns_gsocket_driver.h
src/dns_server/: address.c  address.h  answer.c  answer.h  audit.c  audit.h  cache.c  cache.h  client_rule.c  client_rule.h  cname.c  cname.h  connection.c  connection.h  context.c  context.h  ddr.c  ddr.h  dns64.c  dns64.h  dns_server.c  dns_server.h  dualstack.c  dualstack.h  ip_rule.c  ip_rule.h  ipset_nftset.c  ipset_nftset.h  local_addr.c  local_addr.h  mdns.c  mdns.h  neighbor.c  neighbor.h  prefetch.c  prefetch.h  proxy_server.c  proxy_server.h  ptr.c  ptr.h  (+42 more)
src/fast_ping/: fast_ping.c  fast_ping.h  notify_event.c  notify_event.h  ping_fake.c  ping_fake.h  ping_host.c  ping_host.h  ping_icmp.c  ping_icmp.h  ping_icmp6.c  ping_icmp6.h  ping_tcp.c  ping_tcp.h  ping_tcp_syn.c  ping_tcp_syn.h  ping_udp.c  ping_udp.h  wakeup_event.c  wakeup_event.h
src/http_parse/: hpack.c  hpack.h  http1_parse.c  http1_parse.h  http2.c  http2_parse.c  http2_parse.h  http3.c  http3_parse.c  http3_parse.h  http_parse.c  http_parse.h  qpack.c  qpack.h
src/include/: art.h  atomic.h  bitmap.h  bitops.h  cache.h  conf.h  findbit.h  gcc_builtin.h  hash.h  hashtable.h  idna.h  jhash.h  list.h  nftset.h  radix.h  rbtree.h  stringutil.h  timer_wheel.h
src/include/smartdns/: bloom.h  dns.h  dns_cache.h  dns_client.h  dns_conf.h  dns_plugin.h  dns_server.h  dns_stats.h  fast_ping.h  http2.h  http3.h  http_parse.h  proxy.h  proxy_server.h  regexp.h  smartdns.h  timer.h  tlog.h  util.h
src/include/smartdns/lib/: art.h  atomic.h  bitops.h  conf.h  gcc_builtin.h  gepoll.h  gsocket.h  hash.h  hashtable.h  jhash.h  nftset.h  stringutil.h  timer_wheel.h
src/lib/: art.c  bitops.c  cache.c  conf.c  idna.c  nftset.c  qpack.c  radix.c  rbtree.c  stringutil.c  timer_wheel.c
src/lib/gsocket/: gepoll.c  gsocket.c  gsocket_group.c  gsocket_http1.c  gsocket_http2.c  gsocket_http3.c  gsocket_httpproxy.c  gsocket_sniproxy.c  gsocket_socks5.c  gsocket_ssl.c  gsocket_tproxy.c  gstream_poll.c
src/proxy-server/: firewall.c  firewall.h  proxy_server.c
src/utils/: alpn.c  bloom.c  capbility.c  daemon.c  dns_debug.c  ipset.c  misc.c  neighbors.c  net.c  nftset.c  ssl.c  stack.c  tls_header_parse.c  url.c
systemd/: smartdns.service  smartdns.service.in
test/: Makefile  client.cc  client.h  server.cc  server.h  test.cc  utils.cc
(+235 files in other folders)
