[package]
name = "smartdns-ui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
ctor = "0.2.9"
bytes = "1.10.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["full"] }
hyper-tungstenite = "0.14.0"
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
tokio-rustls = { version = "0.26.1", optional = true}
rustls-pemfile = { version = "2.2.0", optional = true}
serde_json = "1.0.138"
http-body-util = "0.1.2"
getopts = "0.2.21"
url = "2.5.4"
jsonwebtoken = "9"
matchit = "0.8.6"
futures = "0.3.31"
socket2 = "0.5.8"
cfg-if = "1.0.0"
urlencoding = "2.1.3"
chrono = "0.4.39"
nix = "0.29.0"
tokio-fd = "0.3.0"
pbkdf2 = { version = "0.12", features = ["simple"] }

[features]
build-release = []
https = ["tokio-rustls", "rustls-pemfile"]
default = ["https"]

[dev-dependencies]
reqwest = {version = "0.12.12", features = ["blocking"]}
tungstenite = "0.23.0"
tokio-tungstenite = "0.23.1"
tempfile = "3.16.0"

[build-dependencies]
bindgen = "0.69.5"
