[package]
name = "smartdns-ui"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
ctor = "0.4.3"
bytes = "1.10.1"
rusqlite = { version = "0.37.0", features = ["bundled"] }
hyper = { version = "1.7.0", features = ["full"] }
hyper-util = { version = "0.1.17", features = ["full"] }
hyper-tungstenite = "0.18.0"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.225", features = ["derive"] }
tokio-rustls = { version = "0.26.2", optional = true}
rustls-pemfile = { version = "2.2.0", optional = true}
serde_json = "1.0.145"
http-body-util = "0.1.3"
getopts = "0.2.24"
url = "2.5.7"
jsonwebtoken = "9"
matchit = "0.8.6"
futures = "0.3.31"
socket2 = "0.6.0"
cfg-if = "1.0.3"
urlencoding = "2.1.3"
chrono = "0.4.42"
nix = "0.30.1"
tokio-fd = "0.3.0"
pbkdf2 = { version = "0.12.2", features = ["simple"] }
rand_core = { version = "0.6", features = ["std"] }

[features]
build-release = []
https = ["tokio-rustls", "rustls-pemfile"]
default = ["https"]

[dev-dependencies]
reqwest = {version = "0.12.23", features = ["blocking"]}
tungstenite = "0.23.0"
tokio-tungstenite = "0.23.1"
tempfile = "3.22.0"

[build-dependencies]
bindgen = "0.69.5"

[profile.release-optmize-size]
inherits = "release"
lto = true
opt-level = "s"
strip = true
codegen-units = 1
panic = "abort"
